force-app/main/default/objects/Netsuite_OAuth__c/Netsuite_OAuth__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Netsuite OAuth</label>
</CustomObject>