force-app/main/default/objects/Netsuite_OAuth__c/fields/Customer_Key__c.field-meta.xml
<CustomField>
    <fullName>Customer_Key__c</fullName>
    <label>Customer Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>