force-app/main/default/objects/Netsuite_OAuth__c/fields/Customer_Secret__c.field-meta.xml
<CustomField>
    <fullName>Customer_Secret__c</fullName>
    <label>Customer Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>