force-app/main/default/objects/Netsuite_OAuth__c/fields/Signature_Method__c.field-meta.xml
<CustomField>
    <fullName>Signature_Method__c</fullName>
    <label>Signature Method</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>