force-app/main/default/objects/Netsuite_OAuth__c/fields/Token_Secret__c.field-meta.xml
<CustomField>
    <fullName>Token_Secret__c</fullName>
    <label>Token Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>